feat(chat): 添加活动文件显示功能并改进消息存储格式
- 在ChatInput组件中添加activeFileName属性用于显示当前活动文件名
- 在WebSocketGate中修复配置文件保存时的路径创建问题
- 改进消息存储格式，支持metadata字段存储额外信息
- 优化YAML配置文件写入方式，确保UTF-8编码正确性
- 添加样式调整使底部提示区域居中对齐